; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/pmu/extr_memx.c_memx_out.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/nouveau/nvkm/subdev/pmu/extr_memx.c_memx_out.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.nvkm_memx = type { %struct.TYPE_6__, %struct.TYPE_5__* }
%struct.TYPE_6__ = type { i32, i32, i32* }
%struct.TYPE_5__ = type { %struct.TYPE_4__ }
%struct.TYPE_4__ = type { %struct.nvkm_device* }
%struct.nvkm_device = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.nvkm_memx*)* @memx_out to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @memx_out(%struct.nvkm_memx* %0) #0 {
  %2 = alloca %struct.nvkm_memx*, align 8
  %3 = alloca %struct.nvkm_device*, align 8
  %4 = alloca i32, align 4
  store %struct.nvkm_memx* %0, %struct.nvkm_memx** %2, align 8
  %5 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %6 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %5, i32 0, i32 1
  %7 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %8 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %7, i32 0, i32 0
  %9 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %8, i32 0, i32 0
  %10 = load %struct.nvkm_device*, %struct.nvkm_device** %9, align 8
  store %struct.nvkm_device* %10, %struct.nvkm_device** %3, align 8
  %11 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %12 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %12, i32 0, i32 0
  %14 = load i32, i32* %13, align 8
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %57

16:                                               ; preds = %1
  %17 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %18 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %19 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %18, i32 0, i32 0
  %20 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = shl i32 %21, 16
  %23 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %24 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %23, i32 0, i32 0
  %25 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %24, i32 0, i32 0
  %26 = load i32, i32* %25, align 8
  %27 = or i32 %22, %26
  %28 = call i32 @nvkm_wr32(%struct.nvkm_device* %17, i32 1089988, i32 %27)
  store i32 0, i32* %4, align 4
  br label %29

29:                                               ; preds = %47, %16
  %30 = load i32, i32* %4, align 4
  %31 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %32 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %31, i32 0, i32 0
  %33 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %32, i32 0, i32 1
  %34 = load i32, i32* %33, align 4
  %35 = icmp slt i32 %30, %34
  br i1 %35, label %36, label %50

36:                                               ; preds = %29
  %37 = load %struct.nvkm_device*, %struct.nvkm_device** %3, align 8
  %38 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %39 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %38, i32 0, i32 0
  %40 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %39, i32 0, i32 2
  %41 = load i32*, i32** %40, align 8
  %42 = load i32, i32* %4, align 4
  %43 = sext i32 %42 to i64
  %44 = getelementptr inbounds i32, i32* %41, i64 %43
  %45 = load i32, i32* %44, align 4
  %46 = call i32 @nvkm_wr32(%struct.nvkm_device* %37, i32 1089988, i32 %45)
  br label %47

47:                                               ; preds = %36
  %48 = load i32, i32* %4, align 4
  %49 = add nsw i32 %48, 1
  store i32 %49, i32* %4, align 4
  br label %29

50:                                               ; preds = %29
  %51 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %52 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %51, i32 0, i32 0
  %53 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %52, i32 0, i32 0
  store i32 0, i32* %53, align 8
  %54 = load %struct.nvkm_memx*, %struct.nvkm_memx** %2, align 8
  %55 = getelementptr inbounds %struct.nvkm_memx, %struct.nvkm_memx* %54, i32 0, i32 0
  %56 = getelementptr inbounds %struct.TYPE_6__, %struct.TYPE_6__* %55, i32 0, i32 1
  store i32 0, i32* %56, align 4
  br label %57

57:                                               ; preds = %50, %1
  ret void
}

declare dso_local i32 @nvkm_wr32(%struct.nvkm_device*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
